--- a/notebooks/sae_enrichment.ipynb
+++ b/notebooks/sae_enrichment.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/n/data2/hms/dbmi/sunyaev/lab/dlee/.cache/pypoetry/virtualenvs/refusal-direction-f5Ymycjl-py3.12/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from nnsight import LanguageModel\n",
     "\n",
@@ -57,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,8 +74,8 @@
      "output_type": "stream",
      "text": [
       "Total GPU Memory: 45541.31 MB\n",
-      "Allocated GPU Memory: 15740.26 MB\n",
-      "Cached GPU Memory: 15930.00 MB\n"
+      "Allocated GPU Memory: 0.00 MB\n",
+      "Cached GPU Memory: 0.00 MB\n"
      ]
     }
    ],
@@ -93,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,9 +121,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "520"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import json\n",
     "\n",
@@ -127,9 +147,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'stacked_sae_acts_post' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m \u001b[43mstacked_sae_acts_post\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m gemma2_sae\n\u001b[1;32m      3\u001b[0m t\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mempty_cache()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'stacked_sae_acts_post' is not defined"
+     ]
+    }
+   ],
    "source": [
     "del stacked_sae_acts_post\n",
     "del gemma2_sae\n",
@@ -138,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +178,70 @@
      "output_type": "stream",
      "text": [
       "WARNING:root:You tried to specify center_unembed=True for a model using logit softcap, but this can't be done! Softcapping is not invariant upon adding a constantSetting center_unembed=False instead.\n",
-      "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      "Loading checkpoint shards: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2/2 [00:08<00:00,  4.25s/it]\n",
+      "WARNING:root:You are not using LayerNorm, so the writing weights can't be centered! Skipping\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded pretrained model gemma-2-2b-it into HookedTransformer\n",
+      "SAE ID: layer_0/width_16k/canonical\n",
+      "Shape of stacked tensor: torch.Size([520, 16384])\n",
+      "Total number of non-zero activations: 67218\n",
+      "Stacked SAE activations saved to '../data/sae_acts/gemma-scope-2b-pt-res-canonical/layer_0/width_16k/canonical_advbench.pt'\n",
+      "---\n",
+      "SAE ID: layer_1/width_16k/canonical\n",
+      "Shape of stacked tensor: torch.Size([520, 16384])\n",
+      "Total number of non-zero activations: 64476\n",
+      "Stacked SAE activations saved to '../data/sae_acts/gemma-scope-2b-pt-res-canonical/layer_1/width_16k/canonical_advbench.pt'\n",
+      "---\n",
+      "SAE ID: layer_2/width_16k/canonical\n",
+      "Shape of stacked tensor: torch.Size([520, 16384])\n",
+      "Total number of non-zero activations: 94561\n",
+      "Stacked SAE activations saved to '../data/sae_acts/gemma-scope-2b-pt-res-canonical/layer_2/width_16k/canonical_advbench.pt'\n",
+      "---\n",
+      "SAE ID: layer_3/width_16k/canonical\n",
+      "Shape of stacked tensor: torch.Size([520, 16384])\n",
+      "Total number of non-zero activations: 44623\n",
+      "Stacked SAE activations saved to '../data/sae_acts/gemma-scope-2b-pt-res-canonical/layer_3/width_16k/canonical_advbench.pt'\n",
+      "---\n",
+      "SAE ID: layer_4/width_16k/canonical\n",
+      "Shape of stacked tensor: torch.Size([520, 16384])\n",
+      "Total number of non-zero activations: 92794\n",
+      "Stacked SAE activations saved to '../data/sae_acts/gemma-scope-2b-pt-res-canonical/layer_4/width_16k/canonical_advbench.pt'\n",
+      "---\n",
+      "SAE ID: layer_5/width_16k/canonical\n",
+      "Shape of stacked tensor: torch.Size([520, 16384])\n",
+      "Total number of non-zero activations: 54157\n",
+      "Stacked SAE activations saved to '../data/sae_acts/gemma-scope-2b-pt-res-canonical/layer_5/width_16k/canonical_advbench.pt'\n",
+      "---\n",
+      "SAE ID: layer_6/width_16k/canonical\n",
+      "Shape of stacked tensor: torch.Size([520, 16384])\n",
+      "Total number of non-zero activations: 58572\n",
+      "Stacked SAE activations saved to '../data/sae_acts/gemma-scope-2b-pt-res-canonical/layer_6/width_16k/canonical_advbench.pt'\n",
+      "---\n",
+      "SAE ID: layer_7/width_16k/canonical\n",
+      "Shape of stacked tensor: torch.Size([520, 16384])\n",
+      "Total number of non-zero activations: 54163\n",
+      "Stacked SAE activations saved to '../data/sae_acts/gemma-scope-2b-pt-res-canonical/layer_7/width_16k/canonical_advbench.pt'\n",
+      "---\n",
+      "SAE ID: layer_8/width_16k/canonical\n",
+      "Shape of stacked tensor: torch.Size([520, 16384])\n",
+      "Total number of non-zero activations: 59694\n",
+      "Stacked SAE activations saved to '../data/sae_acts/gemma-scope-2b-pt-res-canonical/layer_8/width_16k/canonical_advbench.pt'\n",
+      "---\n",
+      "SAE ID: layer_9/width_16k/canonical\n",
+      "Shape of stacked tensor: torch.Size([520, 16384])\n",
+      "Total number of non-zero activations: 55206\n",
+      "Stacked SAE activations saved to '../data/sae_acts/gemma-scope-2b-pt-res-canonical/layer_9/width_16k/canonical_advbench.pt'\n",
+      "---\n",
+      "SAE ID: layer_10/width_16k/canonical\n",
+      "Shape of stacked tensor: torch.Size([520, 16384])\n",
+      "Total number of non-zero activations: 73459\n",
+      "Stacked SAE activations saved to '../data/sae_acts/gemma-scope-2b-pt-res-canonical/layer_10/width_16k/canonical_advbench.pt'\n",
+      "---\n"
      ]
     }
    ],
@@ -194,7 +289,7 @@
     "    os.makedirs(f'../data/sae_acts/{sae_name}/{sae_id}', exist_ok=True)\n",
     "\n",
     "    # Save the stacked_sae_acts_post tensor\n",
-    "    torch.save(stacked_sae_acts_post, f'../data/sae_acts/{sae_name}/{sae_id}_advbench.pt')\n",
+    "    torch.save(stacked_sae_acts_post.cpu(), f'../data/sae_acts/{sae_name}/{sae_id}_advbench.pt')\n",
     "\n",
     "    # Print confirmation message\n",
     "    print(f\"Stacked SAE activations saved to '../data/sae_acts/{sae_name}/{sae_id}_advbench.pt'\")\n",
@@ -524,7 +619,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 24%|███████████████████████████████████▋                                                                                                               | 97/400 [04:40<14:34,  2.89s/it]"
+      " 30%|████████████████████████████████████████████▌                                                                                                     | 122/400 [05:53<13:28,  2.91s/it]"
      ]
     }
    ],
