update sae enrichment

--- a/notebooks/sae_enrichment.ipynb
+++ b/notebooks/sae_enrichment.ipynb
@@ -121,18 +121,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "520"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31323\n"
+     ]
     }
    ],
    "source": [
@@ -142,7 +139,43 @@
     "with open('../dataset/processed/advbench.json', 'r') as file:\n",
     "    advbench_data = json.load(file)\n",
     "\n",
-    "len(advbench_data)"
+    "len(advbench_data)\n",
+    "\n",
+    "# Read from advbench.json file\n",
+    "with open('../dataset/processed/alpaca.json', 'r') as file:\n",
+    "    alpaca_data = json.load(file)\n",
+    "\n",
+    "print(len(alpaca_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alpaca_data_500 = alpaca_data[:500]\n",
+    "alpaca_data_10000 = alpaca_data[:10000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10000"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(alpaca_data_10000)"
    ]
   },
   {
@@ -170,7 +203,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_sae_activations(sae_name, sae_ids, data, suffix):\n",
+    "    t.set_grad_enabled(False)\n",
+    "    gemma2: HookedSAETransformer = HookedSAETransformer.from_pretrained(\"gemma-2-2b-it\", device=device)\n",
+    "\n",
+    "    for sae_id in sae_ids:\n",
+    "        gemma2_sae, cfg_dict, sparsity = SAE.from_pretrained(\n",
+    "            release=sae_name,\n",
+    "            sae_id=sae_id,\n",
+    "            device=str(device),\n",
+    "        )\n",
+    "    \n",
+    "        all_sae_acts_post = []\n",
+    "    \n",
+    "        for item in data:\n",
+    "            prompt = item['instruction']\n",
+    "            \n",
+    "            # Get top activations on final token\n",
+    "            _, cache = gemma2.run_with_cache_with_saes(\n",
+    "                prompt,\n",
+    "                saes=[gemma2_sae],\n",
+    "                stop_at_layer=gemma2_sae.cfg.hook_layer + 1,\n",
+    "            )\n",
+    "            sae_acts_post = cache[f\"{gemma2_sae.cfg.hook_name}.hook_sae_acts_post\"][0, -1, :]\n",
+    "            all_sae_acts_post.append(sae_acts_post)\n",
+    "    \n",
+    "        # Stack all sae_acts_post tensors\n",
+    "        stacked_sae_acts_post = torch.stack(all_sae_acts_post)\n",
+    "    \n",
+    "        print(f\"SAE ID: {sae_id}\")\n",
+    "        print(f\"Shape of stacked tensor: {stacked_sae_acts_post.shape}\")\n",
+    "        print(f\"Total number of non-zero activations: {(stacked_sae_acts_post != 0).sum().item()}\")\n",
+    "    \n",
+    "        # Create directory if it doesn't exist\n",
+    "        os.makedirs(f'../data/sae_acts/{sae_name}/{sae_id}', exist_ok=True)\n",
+    "    \n",
+    "        # Save the stacked_sae_acts_post tensor\n",
+    "        torch.save(stacked_sae_acts_post.cpu(), f'../data/sae_acts/{sae_name}/{sae_id}_{suffix}.pt')\n",
+    "    \n",
+    "        # Print confirmation message\n",
+    "        print(f\"Stacked SAE activations saved to '../data/sae_acts/{sae_name}/{sae_id}_{suffix}.pt'\")\n",
+    "        print(\"---\")\n",
+    "    \n",
+    "        del stacked_sae_acts_post\n",
+    "        del gemma2_sae\n",
+    "        t.cuda.empty_cache()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:You tried to specify center_unembed=True for a model using logit softcap, but this can't be done! Softcapping is not invariant upon adding a constantSetting center_unembed=False instead.\n",
+      "Loading checkpoint shards: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2/2 [00:05<00:00,  2.58s/it]\n",
+      "WARNING:root:You are not using LayerNorm, so the writing weights can't be centered! Skipping\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded pretrained model gemma-2-2b-it into HookedTransformer\n",
+      "SAE ID: layer_5/width_16k/canonical\n",
+      "Shape of stacked tensor: torch.Size([10000, 16384])\n",
+      "Total number of non-zero activations: 646957\n",
+      "Stacked SAE activations saved to '../data/sae_acts/gemma-scope-2b-pt-res-canonical/layer_5/width_16k/canonical_alpaca_10000.pt'\n",
+      "---\n"
+     ]
+    }
+   ],
+   "source": [
+    "sae_name = \"gemma-scope-2b-pt-res-canonical\"\n",
+    "sae_ids = [f\"layer_{layer}/width_16k/canonical\" for layer in range(11)]  # 0 through 10\n",
+    "sae_ids = [f\"layer_{layer}/width_16k/canonical\" for layer in [5]]  # 0 through 10\n",
+    "\n",
+    "save_sae_activations(sae_name, sae_ids, alpaca_data_10000, suffix = \"alpaca_10000\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -246,16 +368,7 @@
     }
    ],
    "source": [
-    "t.set_grad_enabled(False)\n",
-    "\n",
-    "sae_name = \"gemma-scope-2b-pt-res-canonical\"\n",
-    "sae_ids = [f\"layer_{layer}/width_16k/canonical\" for layer in range(11)]  # 0 through 10\n",
-    "\n",
-    "\n",
     "gemma2: HookedSAETransformer = HookedSAETransformer.from_pretrained(\"gemma-2-2b-it\", device=device)\n",
-    "\n",
-    "import torch\n",
-    "import os\n",
     "\n",
     "for sae_id in sae_ids:\n",
     "    gemma2_sae, cfg_dict, sparsity = SAE.from_pretrained(\n",
@@ -297,7 +410,7 @@
     "\n",
     "    del stacked_sae_acts_post\n",
     "    del gemma2_sae\n",
-    "    t.cuda.empty_cache()\n"
+    "    t.cuda.empty_cache()"
    ]
   },
   {
